--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<script type="text/javascript" charset="utf8" src="./js/table.js"></script>
 <title></title>
 <meta name="bmstable" content="header.json" />
 </head>
