--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 border-bottom: 1px solid #ddd;
                 text-align: center;
                 width: 50%;
+                white-space: nowrap;
             }
             .blueone tr:hover td {
                 color: rgb(202, 202, 219);
