--- a/index.html
+++ b/index.html
@@ -103,10 +103,17 @@
                 let txt = "";
                 let level_test = "";
 
-                for (i = 0; i < arr.length; i++) {
-                    let level = arr[i].level;
-                    let songName = arr[i].title;
-                    let artist = arr[i].artist;
+                let sortedArr = arr.sort(function (a, b) {
+                    const a_num = a.level.split(" ")[1];
+                    const b_num = b.level.split(" ")[1];
+
+                    return a_num - b_num;
+                })
+
+                for (i = 0; i < sortedArr.length; i++) {
+                    let level = sortedArr[i].level;
+                    let songName = sortedArr[i].title;
+                    let artist = sortedArr[i].artist;
 
                     let _level = document.createTextNode(level);
                     let _songName = document.createTextNode(songName);
@@ -131,7 +138,7 @@
                         let _level = document.createTextNode(
                             level +
                                 " (" +
-                                arr.filter((a) => a.level == level).length +
+                                sortedArr.filter((a) => a.level == level).length +
                                 " songs)"
                         );
                         let _ = document.createElement("td");
