--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     let nm = document.createElement("td");
                     let art = document.createElement("td");
                     
-                    nm.setAttribute('onclick', "window.open('http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&bmsmd5=' + sortedArr[i].md5,'','')");
+                    nm.setAttribute('onclick', `window.open('http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&bmsmd5=${sortedArr[i].md5})','','')`);
 
                     lv.appendChild(_level);
                     nm.appendChild(_songName);
