--- a/index.html
+++ b/index.html
@@ -1,181 +1,204 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <script
-            type="text/javascript"
-            charset="utf8"
-            src="https://code.jquery.com/jquery-2.1.3.min.js"
-        ></script>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <script
+      type="text/javascript"
+      charset="utf8"
+      src="https://code.jquery.com/jquery-2.1.3.min.js"
+    ></script>
 
-        <script
-            type="text/javascript"
-            charset="utf8"
-            src="./js/table.js"
-        ></script>
-        <title></title>
-        <meta name="bmstable" content="header.json" />
-    </head>
-    <body>
-        <p id="pid"></p>
+    <script type="text/javascript" charset="utf8" src="./js/table.js"></script>
+    <title></title>
+    <meta name="bmstable" content="header.json" />
+  </head>
+  <body>
+    <p id="pid"></p>
 
-        <style>
-            body {
-                background: rgb(58, 49, 49);
+    <style>
+      body {
+        background: rgb(58, 49, 49);
+      }
+      .blueone {
+        border-collapse: collapse;
+      }
+      .blueone th {
+        padding: 10px;
+        color: rgb(255, 255, 255);
+        border-bottom: 3px solid rgb(188, 201, 206);
+        text-align: center;
+      }
+      .blueone td {
+        color: rgb(255, 255, 255);
+        padding: 10px;
+        border-bottom: 1px solid #ddd;
+        text-align: center;
+        width: 50%;
+        white-space: nowrap;
+      }
+      .blueone tr:hover td {
+        color: rgb(202, 202, 219);
+        cursor: pointer;
+      }
+
+      .divider {
+        background: rgb(97, 94, 90);
+      }
+    </style>
+    <div class="title">
+      <p
+        style="text-align: center; color: rgb(255, 255, 255); font-size: 1.7rem"
+      >
+        Aery 5key Pack
+      </p>
+      <p
+        style="text-align: center; color: rgb(255, 255, 255); font-size: 1rem"
+        id="update"
+      ></p>
+      <p style="text-align: center">
+        <a href="https://discord.gg/VhQahFaXHd" rel="nofollow"
+          ><img
+            src="https://camo.githubusercontent.com/47cdf9d477500a06dca4252b44018a4eeda286806081e2316079cd263ffaf93e/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f446973636f72642d3538363546323f7374796c653d666c61742d737175617265266c6f676f3d646973636f7264266c6f676f436f6c6f723d7768697465"
+            data-canonical-src="https://img.shields.io/badge/Discord-5865F2?style=flat-square&amp;logo=discord&amp;logoColor=white"
+            style="max-width: 100%"
+        /></a>
+      </p>
+    </div>
+
+    <table class="blueone" border="2">
+      <thead>
+        <th>Level</th>
+        <th>Title</th>
+        <th>Artist</th>
+      </thead>
+      <tbody></tbody>
+    </table>
+
+    <script type="text/javascript">
+      let xmlhttp = new XMLHttpRequest();
+
+      xmlhttp.onreadystatechange = function () {
+        if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+          jsonFunction(xmlhttp.responseText);
+        }
+      };
+
+      xmlhttp.open("GET", "data.json", true);
+      xmlhttp.send();
+
+      function jsonFunction(resp) {
+        let arr = JSON.parse(resp);
+        let txt = "";
+        let level_test = "";
+
+        const level_list = {
+          "LEVEL 1": [],
+          "LEVEL 2": [],
+          "LEVEL 3": [],
+          "LEVEL 4": [],
+          "LEVEL 5": [],
+          "LEVEL 6": [],
+          "LEVEL 7": [],
+          "LEVEL 8": [],
+          "LEVEL 9": [],
+          "LEVEL 10": [],
+          "LEVEL 11": [],
+          "LEVEL 12": [],
+          "LEVEL 13": [],
+          "LEVEL 14": [],
+          "LEVEL 15": [],
+          "LEVEL 16": [],
+          "LEVEL 17": [],
+          "LEVEL 18": [],
+          "LEVEL 19": [],
+          "LEVEL 20": [],
+          "LEVEL DUMMY": [],
+        };
+
+        for (let i = 0; i < arr.length; i++) {
+          const level = arr[i].level;
+          const title = arr[i].title;
+          const artist = arr[i].artist;
+          const md5 = arr[i].md5;
+
+          level_list[level].push({ level, title, artist, md5 });
+        }
+
+        for (const folder of Object.keys(level_list)) {
+          level_list[folder].sort((a, b) => {
+            return a.title > b.title ? 1 : -1;
+          });
+        }
+
+        for (const folder of Object.values(level_list)) {
+          for (const song_data of folder) {
+            let level = song_data.level;
+            let title = song_data.title;
+            let artist = song_data.artist;
+            let md5 = song_data.md5;
+
+            let _level = document.createTextNode(level);
+            let _title = document.createTextNode(title);
+            let _artist = document.createTextNode(artist);
+
+            let tr = document.createElement("tr");
+
+            let lv = document.createElement("td");
+            let nm = document.createElement("td");
+            let art = document.createElement("td");
+
+            tr.setAttribute(
+              "onclick",
+              `window.open('http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&bmsmd5=${md5}','','')`
+            );
+
+            lv.appendChild(_level);
+            nm.appendChild(_title);
+            art.appendChild(_artist);
+
+            tr.appendChild(lv);
+            tr.appendChild(nm);
+            tr.appendChild(art);
+
+            let tbody = document.getElementsByTagName("tbody")[0];
+            if (level_test != level) {
+              let _level = document.createTextNode(
+                level +
+                  " (" +
+                  arr.filter((a) => a.level == level).length +
+                  " songs)"
+              );
+              let _ = document.createElement("td");
+              _.setAttribute("colspan", "3");
+              _.className = "divider";
+              _.appendChild(_level);
+              tbody.appendChild(_);
+
+              level_test = level;
             }
-            .blueone {
-                border-collapse: collapse;
-            }
-            .blueone th {
-                padding: 10px;
-                color: rgb(255, 255, 255);
-                border-bottom: 3px solid rgb(188, 201, 206);
-                text-align: center;
-            }
-            .blueone td {
-                color: rgb(255, 255, 255);
-                padding: 10px;
-                border-bottom: 1px solid #ddd;
-                text-align: center;
-                width: 50%;
-                white-space: nowrap;
-            }
-            .blueone tr:hover td {
-                color: rgb(202, 202, 219);
-                cursor: pointer; 
-            }
+            tbody.appendChild(tr);
+          }
+          document.getElementById("pid").innerHTML = txt;
+        }
+      }
 
-            .divider {
-                background: rgb(97, 94, 90);
-            }
-        </style>
-        <div class="title">
-            <p
-                style="
-                    text-align: center;
-                    color: rgb(255, 255, 255);
-                    font-size: 1.7rem;
-                "
-            >
-                Aery 5key Pack
-            </p>
-            <p
-                style="
-                    text-align: center;
-                    color: rgb(255, 255, 255);
-                    font-size: 1rem;
-                "
-                id="update"
-            ></p>
-            <p style="text-align: center">
-                <a href="https://discord.gg/VhQahFaXHd" rel="nofollow"
-                    ><img
-                        src="https://camo.githubusercontent.com/47cdf9d477500a06dca4252b44018a4eeda286806081e2316079cd263ffaf93e/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f446973636f72642d3538363546323f7374796c653d666c61742d737175617265266c6f676f3d646973636f7264266c6f676f436f6c6f723d7768697465"
-                        data-canonical-src="https://img.shields.io/badge/Discord-5865F2?style=flat-square&amp;logo=discord&amp;logoColor=white"
-                        style="max-width: 100%"
-                /></a>
-            </p>
-        </div>
+      let xmlhttp2 = new XMLHttpRequest();
 
-        <table class="blueone" border="2">
-            <thead>
-                <th>Level</th>
-                <th>Title</th>
-                <th>Artist</th>
-            </thead>
-            <tbody></tbody>
-        </table>
+      xmlhttp2.onreadystatechange = function () {
+        if (xmlhttp2.readyState == 4 && xmlhttp.status == 200) {
+          jsonFunction2(xmlhttp2.responseText);
+        }
+      };
 
-        <script type="text/javascript">
-            let xmlhttp = new XMLHttpRequest();
+      xmlhttp2.open("GET", "header.json", true);
+      xmlhttp2.send();
 
-            xmlhttp.onreadystatechange = function () {
-                if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-                    jsonFunction(xmlhttp.responseText);
-                }
-            };
-
-            xmlhttp.open("GET", "data.json", true);
-            xmlhttp.send();
-
-            function jsonFunction(resp) {
-                let arr = JSON.parse(resp);
-                let txt = "";
-                let level_test = "";
-
-                let sortedArr = arr.sort(function (a, b) {
-                    let a_num = a.level.split(" ")[1];
-                    let b_num = b.level.split(" ")[1];
-                    
-                    if(a_num == 'DUMMY') a_num = 99;
-                    if(b_num == 'DUMMY') b_num = 99;
-
-                    return a_num - b_num;
-                })
-
-                for (i = 0; i < sortedArr.length; i++) {
-                    let level = sortedArr[i].level;
-                    let songName = sortedArr[i].title;
-                    let artist = sortedArr[i].artist;
-
-                    let _level = document.createTextNode(level);
-                    let _songName = document.createTextNode(songName);
-                    let _artist = document.createTextNode(artist);
-
-                    let tr = document.createElement("tr");
-
-                    let lv = document.createElement("td");
-                    let nm = document.createElement("td");
-                    let art = document.createElement("td");
-                    
-                    tr.setAttribute('onclick', `window.open('http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&bmsmd5=${sortedArr[i].md5}','','')`);
-
-                    lv.appendChild(_level);
-                    nm.appendChild(_songName);
-                    art.appendChild(_artist);
-
-                    tr.appendChild(lv);
-                    tr.appendChild(nm);
-                    tr.appendChild(art);
-
-                    let tbody = document.getElementsByTagName("tbody")[0];
-                    if (level_test != level) {
-                        let _level = document.createTextNode(
-                            level +
-                                " (" +
-                                sortedArr.filter((a) => a.level == level).length +
-                                " songs)"
-                        );
-                        let _ = document.createElement("td");
-                        _.setAttribute("colspan", "3");
-                        _.className = "divider";
-                        _.appendChild(_level);
-                        tbody.appendChild(_);
-
-                        level_test = level;
-                    }
-                    tbody.appendChild(tr);
-                }
-                document.getElementById("pid").innerHTML = txt;
-            }
-
-            let xmlhttp2 = new XMLHttpRequest();
-
-            xmlhttp2.onreadystatechange = function () {
-                if (xmlhttp2.readyState == 4 && xmlhttp.status == 200) {
-                    jsonFunction2(xmlhttp2.responseText);
-                }
-            };
-
-            xmlhttp2.open("GET", "header.json", true);
-            xmlhttp2.send();
-
-            function jsonFunction2(resp) {
-                let arr = JSON.parse(resp);
-                document.getElementById("update").innerHTML =
-                    "최종 업데이트: " + arr.last_update;
-            }
-        </script>
-    </body>
+      function jsonFunction2(resp) {
+        let arr = JSON.parse(resp);
+        document.getElementById("update").innerHTML =
+          "최종 업데이트: " + arr.last_update;
+      }
+    </script>
+  </body>
 </html>
