--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         }
       };
 
-      xmlhttp.open("GET", "data.json", true);
+      xmlhttp.open("GET", "https://asumatoki.kr/table/aery/data.json", true);
       xmlhttp.send();
 
       function jsonFunction(resp) {
@@ -114,6 +114,7 @@
           "LEVEL 19": [],
           "LEVEL 20": [],
           "LEVEL DUMMY": [],
+          "OLD CHARTS": [],
         };
 
         for (let i = 0; i < arr.length; i++) {
